fix(PreguntasForm): add p-dialog y update style .p-overflow-hidden

--- a/src/assets/layout/styles/theme/lara-light-indigo/theme.css
+++ b/src/assets/layout/styles/theme/lara-light-indigo/theme.css
@@ -7471,4 +7471,7 @@
       }
     }
   }
+  .p-overflow-hidden{
+    overflow: scroll !important;
+  }
 }
